# dLLM-EVAL

./: .gitignore  data_utils.py  evaluate_filtered_resps.py  input_processor.py  interleaved_inferencer.py  math500_utils.py  parser_report.md  pyproject.toml  report_all_tasks.md  report_all_tasks_anole.md  report_all_tasks_mmada.md  report_all_tasks_mmada_m.md  reward_func.py  run_anole.sh  run_lmms-eval.sh  run_mmada.sh  run_mmadaA.sh  run_mmadaM.sh
MMaDA-Parallel-M/: infer_all.py  infer_t2i_grid.py  inference.py  mmada_grpo_trainer.py  run_infer_all.sh  run_infer_t2i_grid.sh  run_train_interleave.sh
MMaDA-Parallel-M/configs/: mmada_interleave_thinkmorph_zebracot.yaml
MMaDA-Parallel-M/interleave_validation/: image1.txt
MMaDA-Parallel-M/models/: __init__.py  modeling_llada.py  modeling_mmada.py  modeling_utils.py
MMaDA-Parallel-M/training/: data.py  dataset_adapter.py  interleave_utils.py  prompting_utils.py  train_interleave.py  utils.py  yaml_dataset.py
lmms-eval/lmms_eval/: __main__.py  evaluator.py  evaluator_utils.py  logging_utils.py  utils.py
model/: builder.py  llava_arch.py  modeling_mmada.py  utils.py
model/language_model/: llava_llada.py
scripts/: queue_lib.py  queue_runner.py  queue_runner_anole.py  queue_runner_mmada.py  regrade_mmvet.py  rescore_all.py  rescore_completed.py
tmp/chartqa_lpad/: chartqa.jsonl
tmp/chartqa_test_16dbg/: chartqa.jsonl
tmp/chartqa_test_2/: chartqa.jsonl
tmp/chartqa_test_bsz1/: chartqa.jsonl
tmp/chartqa_test_dbg/: chartqa.jsonl
tmp/ckpt50_bsz1/: chartqa.jsonl
tmp/ckpt50_bsz4/: chartqa.jsonl
(+46 files in other folders)
