[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llava"
version = "0.1.0"
requires-python = ">=3.11"

dependencies = [
  "torch",
  "tqdm",
  "numpy",
  "scipy",
  "pandas",
  "scikit-learn",
  "sentencepiece",
  "huggingface-hub",
  "omegaconf",
  "liger-kernel",
  "termcolor",
  "nest-asyncio",
  "ipykernel",
  "math-verify",
  "wandb",
  "tensorboard",
  "accelerate",
  "diffusers",
  "deepspeed",
  "peft",
  "bitsandbytes",
  "datasets",
  "evaluate",
  "safetensors",
  "jaxtyping",
  "typeguard",
  "trl",
  "xformers",
  "transformers==4.53.3"
]
